# aws-sam-lambda-rust

./: Cargo.toml  Makefile  README.md  samconfig.toml  template.yaml
src/: lib.rs
