[package]
name = "greetings"
version = "0.0.1"
author = ["vallyscode <vallyscode@gmail.com>"]
edition = "2018"

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }

tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] } 
serde_json = "1.0.66"